Fixed -Log in with Wikipedia- text alignment.

--- a/app/assets/stylesheets/modules/_nav.styl
+++ b/app/assets/stylesheets/modules/_nav.styl
@@ -118,7 +118,7 @@ nav.top-nav
     width 0
     transition all 250ms ease-in-out
     opacity 0
-    vertical-align top
+    vertical-align middle
     white-space nowrap
     text-align left
 
